[package]
name = "lunarcore"
version = "1.1.0"
edition = "2021"
authors = ["Yours App Team"]
description = "LunarCore - Unified mesh firmware supporting MeshCore, Meshtastic, and RNode/Reticulum protocols"
license = "MIT"
repository = "https://github.com/anthropics/lunarcore"
readme = "README.md"

[dependencies]
esp-idf-hal = { version = "0.45", features = ["critical-section"] }
esp-idf-svc = "0.51"
esp-idf-sys = { version = "0.36", features = ["binstart"] }
embedded-hal = "1.0"
embedded-io = "0.6"
heapless = "0.8"
nb = "1.1"
critical-section = "1.2"
log = "0.4"

[build-dependencies]
embuild = "0.33"

[features]
default = ["ble", "board-heltec"]
ble = []
meshtastic = []
rnode = []
board-heltec = []
board-xiao-wio = []

[profile.release]
opt-level = "s"
lto = false
codegen-units = 1
debug = true

[profile.dev]
debug = true
opt-level = "z"

[[bin]]
name = "lunarcore"
path = "src/main.rs"
